# jsk_aerial_robot

./: test.txt
aerial_robot_base/launch/external_module/: mocap.launch
aerial_robot_base/scripts/: rms.py
aerial_robot_control/: CMakeLists.txt
aerial_robot_control/cfg/: PID.cfg
aerial_robot_control/include/aerial_robot_control/control/: pid_angle_controller.h
aerial_robot_control/src/control/: pid_angle_controller.cpp
aerial_robot_control/src/control/utils/: angle_pid.cpp
aerial_robot_nerve/spinal/: CMakeLists.txt
robots/kinikun/: CMakeLists.txt  package.xml
robots/kinikun/arduino/experiment_tworegulator/: MCP4725.ino  experiment_tworegulator.ino
robots/kinikun/config/: FlightControl.yaml  NavigationConfig.yaml  PID.cfg  Servo.yaml  arm_model0.yaml  arm_model1.yaml  arm_model2.yaml  arm_model3.yaml  arm_model4.yaml  arm_modelsecond.yaml
robots/kinikun/config/arm_mode/: arm_model1.yaml  arm_model2.yaml  arm_model_half1.yaml  arm_modelfinal.yaml  arm_modelfirst.yaml
robots/kinikun/launch/: bringup.launch  mocap.launch
robots/kinikun/launch/includes/: sensors.launch.xml
robots/kinikun/script/: angular_diff_test.py  mocap_angle.py  mocap_twoangle.py  mocap_twoangle_lowpass.py  one_arm_pid_controler.py  pid_angle_controll.py  set_arm_mode.py  set_arm_mode_slow_withoutangle.py  set_arm_mode_to_0.py
robots/kinikun/scripts/: MPA_strech.py  ground_experiment.py  mocap_angle.py  set_arm_mode.py  set_arm_mode_slow.py  set_arm_mode_without_angle.py
robots/kinikun/urdf/: robot.gazebo.xacro  robot.urdf.xacro
(+2 files in other folders)
